[package]
name = "raftkv"
version = "0.1.1"
authors = ["siddontang <siddontang@gmail.com>"]

#{ git = "https://github.com/pingcap/raft-rs", branch = "master" }
[dependencies]
raft = "0.4.3"
log = "0.4"
env_logger = "0.6.1"
clap = "2.33.0"
rocket = "0.4.0"
rocket_codegen = "0.4.0"
protobuf = "2"
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
crossbeam-channel = "0.3.8"
reqwest = "0.9.16"
rand = "0.6.5"
failure = "0.1.5"

[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"
